objects/LAT_MX_OnTradePlanning__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>On Trade Plannings</relationshipLabel>
        <relationshipName>On_Trade_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionPlan__c</fullName>
        <label>Plan de Acción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planeamiento__c</fullName>
        <label>Planeamiento</label>
        <referenceTo>Planejamento__c</referenceTo>
        <relationshipLabel>On Trade Plannings</relationshipLabel>
        <relationshipName>On_Trade_Plannings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>On Trade Planning</label>
    <nameField>
        <displayFormat>OTP-{000000}</displayFormat>
        <label>On Trade Planing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>On Trade Plannings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_MX_BlockModificationAfterApproval</fullName>
        <active>true</active>
        <description>If the PVP has been already approved by the Manager, no changes can be performed in the PVP Lines</description>
        <errorConditionFormula>ISPICKVAL( Planeamiento__r.Status_do_Planejamento__c, &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>No se pueden modificar el Planeamiento una vez aprobado por el KAM.</errorMessage>
    </validationRules>
</CustomObject>